--- a/.eslintrc
+++ b/.eslintrc
@@ -46,6 +46,7 @@
     "no-dupe-args": 2,            # disallow duplicate arguments in function definitions
     "no-dupe-keys": 2,            # disallow duplicate keys when creating object literals
     "no-duplicate-case": 1,       # disallow duplicate case labels
+    "no-duplicate-imports": 2,    # disallow duplicate module imports
     "no-empty": 2,                # disallow empty statements
     "no-empty-class": 0,          # disallow the use of empty character classes in regular expressions
     "no-ex-assign": 0,            # disallow assigning to the exception in a catch block
@@ -73,7 +74,7 @@
     "class-methods-use-this": 0, # enforce that class methods utilize 'this'
     "complexity": 2,            # specify the maximum cyclomatic complexity allowed in a program (off by default)
     "consistent-return": 1,     # require return statements to either always or never specify values
-    "curly": 1,                 # specify curly brace conventions for all control statements
+    "curly": 0,                 # specify curly brace conventions for all control statements
     "default-case": 0,          # require default case in switch statements (off by default)
     "dot-notation": 0,          # encourages use of dot notation whenever possible
     "eqeqeq": 2,                # require the use of === and !==.  Hi from Eleanor ^_^
@@ -82,9 +83,9 @@
     "no-caller": 2,             # disallow use of arguments.caller or arguments.callee
     "no-div-regex": 0,          # disallow division operators explicitly at beginning of regular expression (off by default)
     "no-else-return": 2,        # disallow else after a return in an if (off by default)
-    "no-empty-label": 0,        # disallow use of labels for anything other then loops and switches
-    "no-empty-function": 0,     # disallow empty functions
-    "no-eq-null": 0,            # disallow comparisons to null without a type-checking operator (off by default)
+    "no-empty-label": 2,        # disallow use of labels for anything other then loops and switches
+    "no-empty-function": 2,     # disallow empty functions
+    "no-eq-null": 1,            # disallow comparisons to null without a type-checking operator (off by default)
     "no-eval": 2,               # disallow use of eval()
     "no-extend-native": 0,      # disallow adding to native types
     "no-extra-bind": 1,         # disallow unnecessary function binding
@@ -161,8 +162,8 @@
 
     # Stylistic Issues #
 
-    "brace-style": 0,               # enforce one true brace style (off by default)
-    "camelcase": 0,                 # require camel case names
+    "brace-style": 2,               # enforce one true brace style (off by default)
+    "camelcase": 1,                 # require camel case names
     "comma-spacing": 0,             # enforce spacing before and after comma
     "comma-style": 0,               # enforce one true comma style (off by default)
     "consistent-this": 0,           # enforces consistent naming when capturing the current execution context (off by default)
@@ -178,9 +179,9 @@
     "no-lonely-if": 0,              # disallow if as the only statement in an else block (off by default)
     "no-mixed-spaces-and-tabs": 0,  # disallow mixed spaces and tabs for indentation
     "no-multiple-empty-lines": 0,   # disallow multiple empty lines (off by default)
-    "no-nested-ternary": 0,         # disallow nested ternary expressions (off by default)
+    "no-nested-ternary": 2,         # disallow nested ternary expressions (off by default)
     "no-new-object": 0,             # disallow use of the Object constructor
-    "no-space-before-semi": 0,      # disallow space before semicolon
+    "no-space-before-semi": 1,      # disallow space before semicolon
     "no-spaced-func": 0,            # disallow space between function identifier and application
     "no-ternary": 0,                # disallow the use of ternary operators (off by default)
     "no-trailing-spaces": 0,        # disallow trailing whitespace at the end of lines
@@ -191,10 +192,10 @@
     "padded-blocks": 0,             # enforce padding within blocks (off by default)
     "quote-props": 0,               # require quotes around object literal property names (off by default)
     "quotes": 0,                    # specify whether double or single quotes should be used
-    "semi": 0,                      # require or disallow use of semicolons instead of ASI
+    "semi": 2,                      # require or disallow use of semicolons instead of ASI
     "sort-vars": 0,                 # sort variables within the same declaration block (off by default)
     "space-after-function-name": 0, # require a space after function names (off by default)
-    "space-after-keywords": 0,      # require a space after certain keywords (off by default)
+    "space-after-keywords": 2,      # require a space after certain keywords (off by default)
     "space-before-blocks": 0,       # require or disallow space before blocks (off by default)
     "space-in-brackets": 0,         # require or disallow spaces inside brackets (off by default)
     "space-in-parens": 0,           # require or disallow spaces inside parentheses (off by default)
@@ -209,12 +210,13 @@
 
     "no-var": 0,          # require let or const instead of var (off by default)
     "generator-star": 0,  # enforce the position of the * in generator functions (off by default)
+    "no-this-before-super": 2, #disallow this/super before calling super() in constructors
 
 
     # Legacy #
 
     "max-depth": 0,       # specify the maximum depth that blocks can be nested (off by default)
-    "max-len": 0,         # specify the maximum length of a line in your program (off by default)
+    "max-len": ["error", {"code": 120}],         # specify the maximum length of a line in your program (off by default)
     "max-params": 0,      # limits the number of parameters that can be used in the function declaration. (off by default)
     "max-statements": 0,  # specify the maximum number of statement allowed in a function (off by default)
     "no-bitwise": 0,      # disallow use of bitwise operators (off by default)
